content/docs/v2020.10.30/reference/azurerm.kubeform.com/DatabricksWorkspace.md
---
title: DatabricksWorkspace
menu:
  docs_v2020.10.30:
    identifier: databricksworkspace-azurerm.kubeform.com
    name: DatabricksWorkspace
    parent: azurerm.kubeform.com-reference
    weight: 1
menu_name: docs_v2020.10.30
section_menu_id: reference
info:
  community: v0.3.0
  installer: v0.3.0
  version: v2020.10.30
---

## DatabricksWorkspace
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `azurerm.kubeform.com/v1alpha1` |
|    `kind` | string | `DatabricksWorkspace` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[DatabricksWorkspaceSpec](#databricksworkspacespec)***||
| `status` | ***[DatabricksWorkspaceStatus](#databricksworkspacestatus)***||
## DatabricksWorkspaceSpec

Appears on:[DatabricksWorkspace](#databricksworkspace), [DatabricksWorkspaceStatus](#databricksworkspacestatus)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `customParameters` | ***[[]DatabricksWorkspaceSpecCustomParameters](#databricksworkspacespeccustomparameters)***| ***(Optional)*** |
| `location` | ***string***||
| `managedResourceGroupID` | ***string***| ***(Optional)*** |
| `managedResourceGroupName` | ***string***| ***(Optional)*** |
| `name` | ***string***||
| `resourceGroupName` | ***string***||
| `sku` | ***string***||
| `tags` | ***map[string]string***| ***(Optional)*** |
## DatabricksWorkspaceSpecCustomParameters

Appears on:[DatabricksWorkspaceSpec](#databricksworkspacespec)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `noPublicIP` | ***bool***| ***(Optional)*** |
| `privateSubnetName` | ***string***| ***(Optional)*** |
| `publicSubnetName` | ***string***| ***(Optional)*** |
| `virtualNetworkID` | ***string***| ***(Optional)*** |
## DatabricksWorkspaceStatus

Appears on:[DatabricksWorkspace](#databricksworkspace)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[DatabricksWorkspaceSpec](#databricksworkspacespec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis/base/v1alpha1.State***| ***(Optional)*** |
| `phase` | ***[Phase](#phase)***| ***(Optional)*** |
## Phase(`string` alias)

Appears on:[DatabricksWorkspaceStatus](#databricksworkspacestatus)

---
